force-app/main/default/objects/Registartion_form__c/Registartion_form__c.object-meta.xml
<CustomObject>
    <label>Registration Form</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>