force-app/main/default/objects/Registartion_form__c/fields/Available_On_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Available_On_Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available On Weekends</label>
    <type>Checkbox</type>
</CustomField>