force-app/main/default/objects/Registartion_form__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>