force-app/main/default/objects/Registartion_form__c/fields/Student_s_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_s_Parent_Name__c</fullName>
    <label>Student&apos;s Parent Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>