force-app/main/default/objects/Registartion_form__c/fields/Study_Hours__c.field-meta.xml
<CustomField>
    <fullName>Study_Hours__c</fullName>
    <label>Study Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1Hour</fullName>
            </value>
            <value>
                <fullName>In Between 1 to 4 hours</fullName>
            </value>
            <value>
                <fullName>In Between 4 to 8 hours</fullName>
            </value>
            <value>
                <fullName>More than 8 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>