force-app/main/default/objects/Registartion_form__c/fields/Which_class__c.field-meta.xml
<CustomField>
    <fullName>Which_class__c</fullName>
    <label>Which class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>